# RoseEngineC

./: .gitignore  CMakeLists.txt  Camera.h  LICENSE  main.cpp
assets/shaders/: lightSource.frag
include/RoseEngineC/: Camera.h  Debug.h  FileSystem.h  Log.h
include/glad/: glad.h
shaders/: fragment.frag  vertex.vert
src/: FileSystem.cpp  Log.cpp  glad.c  main.cpp
